# FiTui

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: build.yml
scripts/: generate_dev_data.py
src/: app.rs  config.rs  db.rs  form.rs  handlers.rs  lib.rs  main.rs  models.rs  stats.rs  theme.rs  ui.rs
src/ui/: filter.rs  form.rs  header.rs  modal.rs
tests/: db_integration.rs
