[package]
name = "FiTui"
version = "0.2.0"
edition = "2024"
description = "Terminal-based personal finance manager"
license = "MIT"
repository = "https://github.com/ayanchavand/FiTui"
[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

ratatui = "0.26"
crossterm = "0.27"
directories = "5.0"
chrono = "0.4"

[[bin]]
name = "fitui"
path = "src/main.rs"

